--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,3 +25,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  fd_key: 7V3IjgluJ9RDSMsq5j9XdscvfZiuj9Uetsnz5PNa
+  fd_secret: PTWLvxDGjHc66qv28VC4ak6HJ18odOwuejjc0a2V
+  domain_name: http://fdschedule.herokuapp.com
+  fd_domain: https://discothecorgi.frontdeskhq.com
